[project]
name = 'music'
version = '1.0.0-b5'
authors = [
    { name = 'Renato Fabbri', email = 'renato.fabbri@gmail.com' },
    { name = 'Jacopo Donati', email = 'jacopo.donati@gmail.com' }
]
description = 'Extreme-fidelity synthesis of musical elements, based on the MASS framework'
license = { file = "LICENSE" }
readme = 'README.md'
requires-python = '>=3.0'
dependencies = [
    'colorama >= 0.4.6',
    'matplotlib >= 3.7.1',
    'numpy >= 1.26.4',
    'scipy >= 1.12.0',
    'sympy >= 1.12',
    'termcolor >= 2.4.0',
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Religion',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Multimedia :: Sound/Audio :: Sound Synthesis',
    'Topic :: Multimedia :: Sound/Audio :: Editors',
    'Topic :: Multimedia :: Sound/Audio :: Mixers',
    'Topic :: Multimedia :: Sound/Audio :: Speech',
    'Topic :: Multimedia :: Sound/Audio :: Sound Synthesis',
    'Topic :: Artistic Software',
]
keywords = [
    'acoustics',
    'AM',
    'art',
    'audio',
    'campanology',
    'change ringing',
    'filter',
    'FM',
    'HRTF',
    'LUT',
    'MASS',
    'multimedia',
    'music',
    'noise',
    'PCM',
    'permutation',
    'physics',
    'psychophysics',
    'signal processing',
    'sing',
    'sound',
    'spatialization',
    'speech',
    'synth'
]

[project.urls]
Homepage = 'https://github.com/ttm/music'
Issues = 'https://github.com/ttm/music/issues'

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'
